--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             </svg>
                         </a></li>
                         <li class="cms__navGone"><a class="cms__navMenu" href="#">Contact</a></li>
-                        <li><a class="cms__navMenu" id="cms_getStart" href="#">Get Started</a></li>
+                        <li class="cms__liGetStart"><a class="cms__navMenu" id="cms_getStart" href="#">Get Started</a></li>
                     </ul>
                     <div class="cms__hamburger">☰</div>
                 </div>
