--- a/index.html
+++ b/index.html
@@ -942,11 +942,11 @@
                 </div>
             </div>
             <div class="kes--testimonials-body-buttons">
-                <input></input>
-                <input></input>
-                <input></input>
-                <input></input>
-                <input></input>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
             </div>
         </div>
     </section>
@@ -1071,11 +1071,6 @@
                         </p>
                     </div>
                 </div>
-                <input></input>
-                <input></input>
-                <input></input>
-                <input></input>
-                <input></input>
             </div>
         </div>
     </section>
