--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     <section id="bsj5" class="bsj-section">
     
         <div id="bsj-calltoaction">
-            <div id="bsj-calltoaction-title">Call To Action</div>
+            <div id="bsj-calltoaction-title">CALL TO ACTION</div>
             <div id="bsj-calltoaction-details">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
         </div>
         <div id="bsj-callocation-button-wrap">
@@ -378,7 +378,7 @@
         <div class="khj-hidden-img-scale-up" id="khj-Product-scale-up"></div>
 
         <div class="kes--testimonials-header">
-            <h2 class="kes--header-title">Portfolio</h2>
+            <h2 class="kes--header-title">PORTFOLIO</h2>
             <div class="kes--header-divider">
                 <div></div>
                 <div></div>
@@ -541,7 +541,7 @@
     </section>
     <section id="khj6-2">
         <div class="kes--testimonials-header">
-            <h2 class="kes--header-title">Team</h2>
+            <h2 class="kes--header-title">TEAM</h2>
             <div class="kes--header-divider">
                 <div></div>
                 <div></div>
@@ -623,7 +623,7 @@
     </section>
     <section id="bsj7" class="bsj-section">
         <div class="bsj-header">
-            <div>Pricing</div>
+            <div>PRICING</div>
             <span>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</span>
         </div>
 
