도비는자유에요 (최최최종본이라는 뜻)

--- a/index.html
+++ b/index.html
@@ -933,11 +933,11 @@
                 </div>
             </div>
             <div class="kes--testimonials-body-buttons">
-                <input></input>
-                <input></input>
-                <input></input>
-                <input></input>
-                <input></input>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
+                <button></button>
             </div>
         </div>
     </section>
@@ -1062,11 +1062,6 @@
                         </p>
                     </div>
                 </div>
-                <input></input>
-                <input></input>
-                <input></input>
-                <input></input>
-                <input></input>
             </div>
         </div>
     </section>
