--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                             </div>
                         </div>
                         <div class="cms3__percent">
-                            <span>css</span>
+                            <span>CSS</span>
                             <span>90%</span>
                             <div class="cms__bar">
                                 <div class="cms__barPercent p90"> </div>
@@ -356,7 +356,7 @@
     <section id="bsj5" class="bsj-section">
         <img src="./section5-bg.jpg" alt="건물 배경">
         <div id="bsj-calltoaction">
-            <div id="bsj-calltoaction-title">CALL TO ACTION</div>
+            <div id="bsj-calltoaction-title">Call To Action</div>
             <div id="bsj-calltoaction-details">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
         </div>
         <div id="bsj-callocation-button-wrap">
